fix: body wider than viewport
100vw forces body to be exactly as wide as viewport but that doesnt take
stuff like the scrollbar into account which makes it wider than actual
viewport when scrollbar is visible

Reviewed-on: https://codeberg.org/evergarden/site/pulls/3

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,7 +12,7 @@ body {
   background-color: var(--theme-base);
   color: var(--theme-text);
   min-height: 100vh;
-  width: 100vw;
+  width: 100%;
 }
 
 .sans-serif, body {
